--- a/web/assets/css/legacy.less
+++ b/web/assets/css/legacy.less
@@ -119,6 +119,7 @@
 
 #build-body {
   margin-top: 130px;
+  padding: 10px;
 }
 #build-body.build-body-noSubHeader {
   margin-top: 100px;
@@ -145,6 +146,22 @@ span.error {
   font-weight: bold;
 }
 
+ul.prep-status-list {
+  margin-top: 5px;
+  margin-bottom: 10px;
+
+  padding-left: 5px;
+}
+
+li.prep-status {
+  line-height: 1.5em;
+  list-style-type: none;
+
+  .marker {
+    margin-right: 5px;
+  }
+}
+
 .step-collapsed {
   display: none;
 }
@@ -155,10 +172,6 @@ span.error {
 
 .build-step pre {
   margin: 0;
-}
-
-.steps {
-  padding: 10px;
 }
 
 .steps .seq {
@@ -173,7 +186,7 @@ span.error {
   margin-bottom: 0;
 }
 
-.build-step.inactive h3, .build-step.inactive i, .build-step.inactive .dictionary {
+.build-step.inactive h3, .build-step.inactive i, .build-step.inactive .dictionary, .prep-status.inactive {
   color: @base03;
 }
 
